# fastapi-auth-demo

./: .env.example  .env.workflow  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  start_local_server.py  start_running_tests.py
.github/: dependabot.yml  lint-and-format.yml
.github/workflows/: lint-and-format.yml  python-tests.yml
app/: main.py  settings.py
app/auth/: operations.py  router.py  token.py
app/db/: connection.py  operations.py  schema.py
app/logging/: __init__.py
app/user_administration/: router.py
app/users/: models.py  permissions.py  router.py
tests/: conftest.py  settings.py
tests/test_auth/: test_auth_endpoints.py  test_auth_operations.py  test_auth_token.py
tests/test_db/: test_db_operations.py
tests/test_main/: test_main_endpoints.py
tests/test_user_administration/: test_user_administration_endpoints.py
tests/test_users/: test_user_endpoints.py  test_user_permissions.py
