[project]
name = "fastapi-auth-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.115.8",
    "flake8-pyproject>=1.2.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.1.1",
    "httpx>=0.28.1",
    "isort>=6.0.0",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]

[tool.black]
line-length=120

[tool.isort]
profile = "black"
skip = [".gitignore", ".venv"]
extend_skip = [".md"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-svv --cov=app"
testpaths = [
    "tests",
]
asyncio_default_fixture_loop_scope = "function"

[tool.flake8]
max-line-length = 120
ignore = ["E501"]